--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,14 +1,86 @@
-.images {
-  display: block;
-  max-width: 100%;
+/* General grid for whole site including header, left sidebar, and main content */
+header {
+  background-color: $color-primary;
+  color: #FFF;
+  grid-column: 1 / 3;
 }
 
-.lb-details {
-  width: 100% !important;
+nav {
+  grid-column: 1 / 2;
+
 }
 
-.lb-close {
-  display: inline-block !important;
-  text-align: center !important;
-  float: none !important;
+main {
+  background: #FFF;
+  grid-column: 2 / 3;
+}
+
+
+body {
+  display: grid;
+  height: 100vh;
+  grid-template: auto 1fr / auto 1fr
+}
+
+/* Inner grid including widgets */
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(auto);
+
+}
+
+#traffic {
+  @include widget;
+  grid-column: 1 / span 2;
+  height: 200px;
+  border-bottom: $border;
+}
+
+#daily-traffic {
+  @include widget;
+  grid-column: 1 / span 1;
+  height: 200px;
+  border-right: $border;
+}
+
+#mobile-users {
+  @include widget;
+  grid-column: 2 / span 1;
+  height: 200px;
+}
+
+#social-stats {
+  @include widget;
+  grid-column: 1 / span 2;
+  height: 200px;
+  border-top: $border;
+  border-bottom: $border;
+}
+
+#new-members {
+  @include widget;
+  grid-column: 1 / span 1;
+  height: 200px;
+  border-right: $border;
+}
+
+#recent-activity {
+  @include widget;
+  grid-column: 2 / span 1;
+  height: 200px;
+}
+
+#message-user {
+  @include widget;
+  grid-column: 1 / span 1;
+  border-right: $border;
+  border-top: $border;
+}
+
+#settings {
+  @include widget;
+  border-top: $border;
+  grid-column: 2 / span 1;
 }
