--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,3 +1,11 @@
-img {
-  @include image-styles;
+.notification-icon {
+  margin-left: auto;
+  margin-right: 25px;
+  padding-right: 10px;
+  border-right: solid $color-secondary .5px;
+}
+
+.profile-avatar img {
+  border-radius: 50%;
+  margin-right: 1em;
 }
