--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -163,6 +163,7 @@ input:checked+.slider:after {
   color: lightgrey;
   border: $border;
   border-radius: 5px;
+  background-color: $color-background;
 }
 
 .widget-two-button {
