--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,8 +5,9 @@
 // Colors
 
 $color-text: #777;
-$color-primary: #7c7ebc;
+$color-primary: #7477BF;
 $color-secondary: #4c4b73;
+$color-background: #FBFBFB;
 
 // Fonts
 
