--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,9 +5,11 @@
 // Colors
 
 $color-text: #777;
+$color-text-lighter: #A7A7A7;
 $color-primary: #7477BF;
 $color-secondary: #4c4b73;
 $color-background: #FBFBFB;
+$font-size: 11px;
 
 // Fonts
 
