--- a/scss/components/_base-styles.scss
+++ b/scss/components/_base-styles.scss
@@ -1,3 +1,13 @@
+input,
+textarea {
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
+  /* Opera/IE 8+ */
+}
+
 header {
   background-color: $color-primary;
   color: #FFF;
@@ -22,11 +32,18 @@ h2 {
 
 .dashboard-and-search {
   display: flex;
-  align-items: center;
 
 }
 
 .profile-avatar {
+  display: flex;
+  align-items: center;
+}
+
+.border {
+  flex-grow: 1;
+  border-left: $border;
+  border-bottom: $border;
   display: flex;
   align-items: center;
 }
