--- a/scss/components/_widgets.scss
+++ b/scss/components/_widgets.scss
@@ -39,75 +39,72 @@
 .media-number {
   font-size: 1em;
   color: $color-text;
-  font-size: 2.2em;
+  font-size: 2.1em;
 
 }
 
 
 //New members  widget
 
-.container-members {
-  font-size: .8em;
 
-  div:last-child {
+.container-activity,
+.container-members {
+  font-size: $font-size;
+
+  .member:last-child {
     border: none;
 
   }
 
-  div {
+  .member {
     display: flex;
     border-bottom: $border;
-    padding-bottom: 5px;
     color: $color-text;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
 
-
-
-    img {
+    .member-photo {
       @include round-images;
-
+      margin-right: 5px;
     }
 
-
-    h3,
-    a {
+    .member-info {
       display: block;
+      flex: auto;
+      border-bottom: none;
 
     }
 
+    p,
+    a {
+      margin-top: 0;
+      margin-bottom: 0;
+      font-size: $font-size;
+    }
 
     a:link {
       text-decoration: none;
       color: $color-primary;
     }
 
+    span {
+      font-size: $font-size;
+      font-weight: bold;
+
+    }
   }
 }
 
+//Mobile users widget
 
-.container-activity {
-  font-size: .8em;
+#mobile-users {
+  padding-bottom: 20px;
 
+}
 
-  div:last-child {
-    border: none;
+#daily-traffic {
+  padding-bottom: 10px;
 
-  }
-
-  div {
-    display: flex;
-    border-bottom: $border;
-    color: $color-text;
-    justify-content: space-between;
-    align-items: center;
-
-
-
-    img {
-      @include round-images;
-      margin-right: 5px;
-    }
-
-  }
 }
