--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,7 +6,8 @@
  @import 'navigation';
  @import 'images';
  @import 'grid';
- @import 'media-queries';
  @import 'base-styles';
  @import 'svg';
  @import 'widgets';
+ @import 'charts';
+ @import 'media-queries';
