--- a/scss/components/_widgets.scss
+++ b/scss/components/_widgets.scss
@@ -1,20 +1,19 @@
 //Social media widget
 
-#social-stats {
+.container-social {
   display: flex;
-  flex-direction: row !important;
+  flex-direction: column;
   align-items: center;
-
-
+  justify-content: space-between;
 }
 
 .social-media {
   padding: 15px 20px;
-  width: 25%;
+  width: 80%;
   background-color: $color-background;
   border: $border;
   border-radius: 5px;
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 .social-media {
@@ -33,13 +32,13 @@
 .media-name {
   color: $color-primary;
   font-weight: bold;
-
+  font-size: 1.6vw;
 }
 
 .media-number {
   font-size: 1em;
   color: $color-text;
-  font-size: 2.1em;
+  font-size: 2.8vw;
 
 }
 
