--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,10 +1,16 @@
-@mixin widget {
+@mixin widget-small {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: auto;
   padding-left: 6%;
   padding-right: 6%;
+}
+
+@mixin widget-large {
+  @include widget-small;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 @mixin widget-padding {
@@ -14,6 +20,5 @@
 }
 
 @mixin round-images {
-
   border-radius: 50%;
 }
