Added a mobile navigation, added styling to the page

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -159,10 +159,11 @@ input:checked+.slider:after {
   @include widget-padding;
   display: block;
   padding: 8px;
-  color: lightgrey;
+  color: $color-text-lighter;
   border: $border;
   border-radius: 5px;
   background-color: $color-background;
+  margin-top: 10px;
 }
 
 .widget-two-button {
