--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -19,7 +19,7 @@ $font-stack-accent: 'Playfair Display',
 serif;
 
 //Border style
-$border: solid lightgrey .5px;
+$border: solid #A7A7A7 .5px;
 
 
 // Breakpoints
