--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -12,14 +12,14 @@ nav {
 
 main {
   background: #FFF;
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
 }
 
 
 body {
   display: grid;
   height: 100vh;
-  grid-template: auto 1fr / auto 1fr
+  grid-template-columns: 1fr;
 }
 
 /* Inner grid including widgets */
