--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,10 +1,13 @@
-@media (min-width: $breakpoint-tablet) {}
-
-@media (min-width: $breakpoint-laptop) {}
-
-
-
 @media screen and (min-width: $breakpoint-tablet) {
+  body {
+    grid-template: auto 1fr / auto 1fr
+  }
+
+  main {
+    background: #FFF;
+    grid-column: 2 / 3;
+  }
+
   .container-social {
     flex-direction: row;
 
@@ -12,12 +15,30 @@
       width: 25%;
     }
   }
+
+  .profile-avatar span {
+    display: block;
+  }
 }
 
 @media screen and (min-width: $breakpoint-laptop) {
-  nav {
-   display: block;
- }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  #hamburger-link {
+    display: none;
+  }
+
+  .desktop-nav {
+    display: block !important;
+  }
+
+  #dashboard-button {
+    display: block;
+
+  }
 
   .grid {
     grid-template-columns: repeat(2, 1fr);
