--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,17 +1,75 @@
 nav {
   background-color: $color-secondary;
   width: auto;
-  display: none;
+
+  .desktop-nav {
+    display: none;
+  }
 }
 
 .nav-items {
+  border-left: solid $color-secondary 4px;
+  border-right: solid $color-secondary 4px;
+
   height: 25px;
   width: 25px;
-  padding: 15px 25px;
+  padding: 15px 20px;
   margin: 10px 0px;
 }
 
-.nav-items:first-child {
-  border-left: solid #81C98F 5px;
+.nav-items:hover {
+  border-left: solid #81C98F 4px;
+
+  path {
+    fill: #fff;
+  }
+}
+
+/* Mobile Navigation*/
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: $color-secondary;
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: $color-text-lighter;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: #FFF;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: $color-secondary;
+}
+
+#hamburger-link {
+  margin-right: 10px;
+
+}
+
+#hamburger-link:hover {
+  color: lightgrey;
+  transform: scale(1.2);
 
 }
