--- a/scss/components/_widgets.scss
+++ b/scss/components/_widgets.scss
@@ -18,7 +18,7 @@
 
 .social-media {
   p {
-    display: inline-block;
+    display: block;
     margin: 0;
 
   }
@@ -32,13 +32,13 @@
 .media-name {
   color: $color-primary;
   font-weight: bold;
-  font-size: 1.6vw;
+  font-size: 16px;
 }
 
 .media-number {
   font-size: 1em;
   color: $color-text;
-  font-size: 2.8vw;
+  font-size: 35px;
 
 }
 
