Addes responsive time series chart, added styling

--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -9,6 +9,7 @@ $color-text-lighter: #A7A7A7;
 $color-primary: #7477BF;
 $color-secondary: #4c4b73;
 $color-background: #FBFBFB;
+$color-green: #81C98F;
 $font-size: 11px;
 
 // Fonts
