--- a/scss/components/_charts.scss
+++ b/scss/components/_charts.scss
@@ -7,3 +7,49 @@
 canvas {
   width: 100% !important;
 }
+
+//Line Chart
+
+.line-chart {
+  display: flex;
+  align-items: center;
+
+  .chart-buttons {
+    margin-left: auto;
+    font-size: $font-size;
+    margin-right: 20px;
+  }
+}
+
+
+.chart-buttons input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 60px;
+
+}
+
+.chart-buttons {
+  .button {
+    width: 60px;
+    display: inline-block;
+    text-align: center;
+
+    label {
+      border: none;
+      background: none;
+      cursor: pointer;
+      color: $color-text;
+      font-weight: bold;
+    }
+  }
+
+}
+
+.chart-buttons input[type="radio"]:checked+label {
+  background-color: $color-green;
+  color: #FFF;
+  outline: none;
+  padding: 8px;
+  border-radius: 15px;
+}
