--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -8,6 +8,10 @@
     grid-column: 2 / 3;
   }
 
+  header {
+    grid-column: 1 / 3;
+  }
+
   .container-social {
     flex-direction: row;
 
@@ -30,7 +34,7 @@
   }
 
   .media-number {
-    font-size: 28px;
+    font-size: 26px;
 
   }
 }
