--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -18,7 +18,7 @@ nav {
 }
 
 .nav-items:hover {
-  border-left: solid #81C98F 4px;
+  border-left: solid $color-green 4px;
 
   path {
     fill: #fff;
