Added functionality to the website

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -17,6 +17,15 @@
 
 }
 
+/* Autocomplete*/
+
+.ui-menu-item {
+  font-size: $font-size;
+  color: $color-text;
+
+}
+
+
 //input-search fields for message to user
 #input-search,
 #input-message {
