--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -61,6 +61,7 @@ nav {
 .topnav a:hover {
   background-color: #ddd;
   color: $color-secondary;
+
 }
 
 #hamburger-link {
@@ -71,5 +72,5 @@ nav {
 #hamburger-link:hover {
   color: lightgrey;
   transform: scale(1.2);
-
+  cursor: pointer;
 }
