--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -6,7 +6,7 @@
 
 }
 
-.notification-icon:hover {
+.notification-icon svg:hover {
   -webkit-animation: ring 4s .7s ease-in-out infinite;
   -webkit-transform-origin: 50% 4px;
   -moz-animation: ring 4s .7s ease-in-out infinite;
