--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -51,3 +51,36 @@
 #input-message {
   height: 10em;
 }
+
+/* Overlay*/
+
+.overlay {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  background-color: white;
+}
+
+#container-message {
+  position: relative;
+
+}
+
+#user,
+#user-message {
+  color: red;
+  font-size: 12px;
+
+}
+
+#user-message-submit {
+  color: $color-primary;
+
+}
